--- a/web.UI/package.json
+++ b/web.UI/package.json
@@ -18,9 +18,14 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@aspnet/signalr": "^1.0.4",
+    "@microsoft/signalr": "^8.0.7",
     "jwt-decode": "^4.0.0",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-pagination": "^6.0.3",
+    "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^19.0.0",
+    "path-to-regexp": "^7.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
